fix: buttons hidden under the canvas

--- a/themes/grimoire/source/css/index.styl
+++ b/themes/grimoire/source/css/index.styl
@@ -24,8 +24,11 @@ body
   text-align center
   position relative
 
+.abs
+
 #bg
   position absolute
+  z-index 0
   top 30%
   left 50%
   transform translate(-50%, -50%)
@@ -36,8 +39,12 @@ canvas
 nav
   width 350px
   margin-bottom 50px
+  position relative
 
 #menu
+  width 350px
+  position absolute
+  z-index 10
   menu(color-inverse-normal, color-primary)
 
 #logo-icon
@@ -109,7 +116,13 @@ button(color, color-i)
     border-color color
     background-color alpha(color, alpha(color) - 0.2)
 
+#primary-buttons
+  width 265px
+  position relative
+
 #install-button
+  position absolute
+  z-index 10
   button(color-primary, color-inverse)
 
 #description
